[gd_scene load_steps=20 format=3 uid="uid://bdwst50utlk8l"]

[ext_resource type="Texture2D" uid="uid://dumj8lw1wbr2e" path="res://Assets/Sprites/06-Pig Hide in the Box/Looking Out (26x20).png" id="1_dhm0k"]
[ext_resource type="Script" uid="uid://cmln3r5j3y87b" path="res://scripts/mimicPiggyAI.gd" id="1_lo23t"]
[ext_resource type="Texture2D" uid="uid://bhw327ig3vthy" path="res://Assets/Sprites/06-Pig Hide in the Box/Fall (26x20).png" id="3_lo23t"]
[ext_resource type="Texture2D" uid="uid://bbw5wvq0gjnnk" path="res://Assets/Sprites/06-Pig Hide in the Box/Ground (26x20).png" id="4_rwnpw"]
[ext_resource type="Texture2D" uid="uid://scp2phhnlt7o" path="res://Assets/Sprites/06-Pig Hide in the Box/Jump (26x20).png" id="5_a6kyt"]
[ext_resource type="Texture2D" uid="uid://bc8d2703jcf8y" path="res://Assets/Sprites/06-Pig Hide in the Box/Jump Anticipation (26x20).png" id="6_q01go"]

[sub_resource type="AtlasTexture" id="AtlasTexture_g7p1u"]
atlas = ExtResource("3_lo23t")
region = Rect2(0, 0, 26, 20)

[sub_resource type="AtlasTexture" id="AtlasTexture_da0en"]
atlas = ExtResource("4_rwnpw")
region = Rect2(0, 0, 26, 20)

[sub_resource type="AtlasTexture" id="AtlasTexture_qetc2"]
atlas = ExtResource("1_dhm0k")
region = Rect2(0, 0, 26, 20)

[sub_resource type="AtlasTexture" id="AtlasTexture_at67k"]
atlas = ExtResource("1_dhm0k")
region = Rect2(0, 0, 26, 20)

[sub_resource type="AtlasTexture" id="AtlasTexture_27elf"]
atlas = ExtResource("1_dhm0k")
region = Rect2(26, 0, 26, 20)

[sub_resource type="AtlasTexture" id="AtlasTexture_lo23t"]
atlas = ExtResource("1_dhm0k")
region = Rect2(52, 0, 26, 20)

[sub_resource type="AtlasTexture" id="AtlasTexture_2dcco"]
atlas = ExtResource("5_a6kyt")
region = Rect2(0, 0, 26, 20)

[sub_resource type="AtlasTexture" id="AtlasTexture_5nsqh"]
atlas = ExtResource("5_a6kyt")
region = Rect2(26, 0, 26, 20)

[sub_resource type="AtlasTexture" id="AtlasTexture_se6qy"]
atlas = ExtResource("6_q01go")
region = Rect2(0, 0, 26, 20)

[sub_resource type="AtlasTexture" id="AtlasTexture_fjnbk"]
atlas = ExtResource("6_q01go")
region = Rect2(26, 0, 26, 20)

[sub_resource type="SpriteFrames" id="SpriteFrames_rwnpw"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_g7p1u")
}],
"loop": false,
"name": &"fall",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_da0en")
}],
"loop": false,
"name": &"ground",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_qetc2")
}],
"loop": false,
"name": &"hide",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_at67k")
}, {
"duration": 5.0,
"texture": SubResource("AtlasTexture_27elf")
}, {
"duration": 5.0,
"texture": SubResource("AtlasTexture_lo23t")
}],
"loop": false,
"name": &"idle",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_2dcco")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_5nsqh")
}],
"loop": false,
"name": &"jump",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_se6qy")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_fjnbk")
}],
"loop": false,
"name": &"jumpantip",
"speed": 10.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_dhm0k"]
size = Vector2(18.5, 14.25)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_viewrange"]
size = Vector2(88.875, 46.1875)

[node name="mimicPiggy" type="CharacterBody2D"]
script = ExtResource("1_lo23t")

[node name="SpriteAnchor" type="Node2D" parent="."]
position = Vector2(0, 5)

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="SpriteAnchor"]
sprite_frames = SubResource("SpriteFrames_rwnpw")
animation = &"idle"

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, 7)
shape = SubResource("RectangleShape2D_dhm0k")

[node name="Hitbox" type="Area2D" parent="."]
collision_layer = 2
collision_mask = 8

[node name="CollisionShape2D" type="CollisionShape2D" parent="Hitbox"]
position = Vector2(0, 1)
shape = SubResource("RectangleShape2D_dhm0k")

[node name="ViewRange" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="ViewRange"]
position = Vector2(1, 3)
shape = SubResource("RectangleShape2D_viewrange")

[connection signal="area_entered" from="Hitbox" to="." method="on_hit_box_entered"]
[connection signal="body_entered" from="ViewRange" to="." method="on_view_range_entered"]
[connection signal="body_exited" from="ViewRange" to="." method="on_view_range_exited"]
